Refactored the UserService (#52)
* Refactored the UserService. ChangLog:
--- Rename the AWS to Aws
--- Rename the IdentityProvider to Idp
--- Change the IdpClient to use the instance instead of the Factory
--- Change the AwsIdpFactory to just AwsFactory
--- Refactor the indentation for the UserController getUsers method.
--- Refactor the UserController's parameters.
--- Removed the Usage of FixedTypeDto
    - AddUserDto
    - AddUserRoleDto
    - UpdateUserDto
--- DTO shouldn't implement Base Interfaces.
--- Remove FixedTypeEntity
--- The setRoles method seems to be weird. If-else logic doesn't make sense. What if the roles is null when adding?
--- Remove the PROPERTY enums.
--- Remove the DEFAULT value from the UserStatus class.
--- Remove the UserRoleTypeRepo to not have findByName
--- Remove the UserSalutationRepo to not have findByName.
--- Remove the UserStatus to not have findByName.
--- Refactor the mapAndSave function of EnhancedUserRepositoryImpl
--- AWSCognitoIdentityProviderFactoryImpl 's logger should be private.
--- AwsCognitoIdentityProviderClient 's logger should be private.
--- IdentityProviderClient rename to idpClient.
--- Create a UserAttributes class that has a map based implementation.
--- Create an IdpUserRepository where all private methods in UserService are placed.
--- Added version and audit fields to the status entity.
--- Added version and audit fields to the userSalutation entity.
--- Fix the _USERS sql indentation.
--- Replace the != null with Objects.nonNull call

* wip

* Unit tests for the controller

* Refactored the user service and covered test for controller and service layers

* unit tests for the user repositories

* Added tests for the IdpRepos

* Unit tests for the UserSalutation and mappers

* Repository configuration

* Replaced the usage of Set with SortedSet for the column sort

* Fixed the accessorRefresher signatures

* Enabled the unit tests that were previously disabled 